[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenbudget"
version = "0.1.1"
description = "Lightweight token tracking, cost management, and budget enforcement for LLM API calls"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    { name = "TokenBudget Contributors" },
]
keywords = [
    "llm",
    "openai",
    "anthropic",
    "tokens",
    "cost-tracking",
    "budget",
    "ai",
    "gpt",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0; python_version < '3.11'",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
google = [
    "google-generativeai>=0.3.0",
]
all = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/aryanjp1/tokenbudget"
Documentation = "https://github.com/aryanjp1/tokenbudget#readme"
Repository = "https://github.com/aryanjp1/tokenbudget"
Issues = "https://github.com/aryanjp1/tokenbudget/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tokenbudget"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=tokenbudget --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py39"]
